slide jean detoeuf

--- a/index.html
+++ b/index.html
@@ -27,14 +27,18 @@
 				<section>
 					<h1>Architecture héxagonale</h1>
 				</section>
+				<section>
+					<h1>Jean Detoeuf</h1>
+					<h2>Développeur</h2>
+					<p>Passionné de nouvelles technologies</p>
+					<p>#jvm #docker #craftmanship #rpi #diy</p>
+				</section>
 				<section data-background="img/spaghetti.jpg">
-					<p>
-						<ul>
-							<li>Code framework au milieu du code métier</li>
-							<li>Difficulté pour changer de framework</li>
-							<li>Tests trop lourds (besoin de charger une BDD en mémoire, un framework de DI)</li>
-						</ul>
-					</p>
+					<ul>
+						<li>Code framework au milieu du code métier</li>
+						<li>Difficulté pour changer de framework</li>
+						<li>Tests trop lourds (besoin de charger une BDD en mémoire, un framework de DI)</li>
+					</ul>
 				</section>
 				<section>
 					<h3>Architecture en couche</h3>
