--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Architecture héxagonale</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/black.css">
@@ -29,6 +29,9 @@
 					<h1 style="font-family: 'JelleeRoman'">Architecture héxagonale</h1>
 					<h2 style="font-family: 'JelleeRoman'">Human Talks Lyon</h2>
 					<h3 style="font-family: 'JelleeRoman'">12 octobre <font style="color: orange">2016</font></h3>
+				</section>
+				<section style="text-align: right;">
+					<h1 style="font-family: 'JelleeRoman'">en 10 minutes !</h1>
 				</section>
 				<section>
 					<h1>Jean Detoeuf</h1>
@@ -69,8 +72,8 @@
 					<h3>Architecture héxagonale</h3>
 					<ul>
 						<li>Permet d'isoler le code métier du code d'infrastructure</li>
-						<li>Agnostique : vous pouvez l'utiliser avec votre langage préféré</li>
-						<li>Anti-framework par excellence</li>
+						<li>Agnostique : amenez votre langage préféré</li>
+						<li>Framework killer</li>
 					</ul>
 					<p>
 						<img src="img/citadelle.jpg" style="border:0; height: 350px;">
@@ -90,7 +93,7 @@
 				<section>
 					<h3>Concept</h3>
 					<ul>
-						<li>Code métier sans bibliothèque ni framework (ou alors très simples)</li>
+						<li>Code métier sans bibliothèque ni framework</li>
 						<li>Code technique dans des modules séparés</li>
 					</ul>
 					<p>
@@ -108,10 +111,10 @@
 					</ul>
 				</section>
 				<section>
-					<h3>Comment je mets ça en place dans mon projet ?</h3>
+					<h3>On commence quand ?</h3>
 					<ul>
 						<li>nouveaux : simple à mettre en place</li>
-						<li>existants : beaucoup plus compliqué à déméller le spaggheti</li>
+						<li>existants : démêlage de spaghettis</li>
 					</ul>
 					<p>
 						<img src="img/cantWait.gif" style="border:0; height: 350px;">
@@ -123,13 +126,14 @@
 						<li>Changer de framework</li>
 						<li>Changer de BDD</li>
 						<li>Migrer une partie des données (ie SQL vers NoSQL)</li>
+						<li>Ajouter une interface (API, messaging, autre IHM)</li>
 					</ul>
 				</section>
 				<section>
-					<h3>Points d'attention</h3>
+					<h3>Perméabilité</h3>
 					<ul>
 						<li>Impossible d'utiliser du code "infra" dans le module "métier"</li>
-						<li>Rien n'empêche d'avoir du code "métier" qui se retrouve dans les modules "infra".</li>
+						<li>Rien n'empêche d'avoir du code "métier" qui se retrouve dans les modules "infra"</li>
 					</ul>
 				</section>
 				<section>
