--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<title>Architecture héxagonale</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
+		<link rel="stylesheet" href="css/reveal-override.css">
 		<link rel="stylesheet" href="css/theme/black.css">
 		<link rel="stylesheet" media="screen" href="css/jellee-typeface.css" type="text/css"/> 
 
@@ -26,18 +27,18 @@
 		<div class="reveal">
 			<div class="slides">
 				<section style="text-align: right;">
-					<h1 style="font-family: 'JelleeRoman'">Architecture héxagonale</h1>
-					<h2 style="font-family: 'JelleeRoman'">Human Talks Lyon</h2>
-					<h3 style="font-family: 'JelleeRoman'">12 octobre <font style="color: orange">2016</font></h3>
+					<h1 class="jellee">Architecture héxagonale</h1>
+					<h2 class="jellee">Human Talks Lyon</h2>
+					<h3 class="jellee">12 octobre <font style="color: orange">2016</font></h3>
 				</section>
 				<section style="text-align: right;">
-					<h1 style="font-family: 'JelleeRoman'">en 10 minutes !</h1>
+					<h1 class="jellee">en 10 minutes !</h1>
 				</section>
 				<section>
-					<h1>Jean Detoeuf</h1>
-					<h2>Développeur</h2>
-					<p>Passionné de nouvelles technologies</p>
-					<p>#jvm #docker #craftmanship #rpi #diy</p>
+					<h1 class="jellee">Jean Detoeuf</h1>
+					<h2 class="jellee">Développeur</h2>
+					<p class="jellee">Passionné de nouvelles technologies</p>
+					<p class="jellee">#jvm #docker #craftmanship #rpi #diy</p>
 				</section>
 				<section data-background="img/spaghetti.jpg">
 					<div style="background-color:rgba(0, 0, 0, 0.5);">
@@ -155,6 +156,14 @@
 					<p>
 						<img src="img/questions.gif" style="border:0; height: 350px;">
 					</p>
+				</section>
+				<section class="has-light-background" data-background-color="#ffffff">
+					<h2>Merci pour votre écoute</h2>
+					<ul>
+						<li><img class="no-shadow inline" src="img/twitter-logo.png" style="height:1em"/> <a href="https://twitter.com/thebignet">@thebignet</a></li>
+						<li><img class="no-shadow inline" src="img/github-logo.png" style="height:1em"/> <a href="https://github.com/thebignet">thebignet</a></li>
+						<li>Cette présentation : <a href="https://thebignet.github.io/talk-archi-hexa">talk-archi-hexa</a></li>
+					</ul>
 				</section>
 			</div>
 		</div>
