--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 					<h1 class="jellee">Jean Detoeuf</h1>
 					<h2 class="jellee">Développeur</h2>
 					<p class="jellee">Passionné de nouvelles technologies</p>
-					<p class="jellee">#jvm #docker #craftmanship #rpi #diy</p>
+					<p class="jellee">#jvm #docker #craftsmanship #rpi #diy</p>
 				</section>
 				<section data-background="img/spaghetti.jpg">
-					<div style="background-color:rgba(0, 0, 0, 0.5);">
+					<div style="background-color:rgba(0, 0, 0, 0.5);" class="fragment">
 						<ul>
 							<li>Code framework au milieu du code métier</li>
-							<li>Difficulté pour changer de framework</li>
-							<li>Tests trop lourds</li>
+							<li class="fragment">Difficulté pour changer de framework</li>
+							<li class="fragment">Tests trop lourds</li>
 						</ul>
 					</div>
 				</section>
