--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<section style="text-align: right;">
 					<h1 class="jellee">Architecture héxagonale</h1>
 					<h2 class="jellee">Human Talks Lyon</h2>
-					<h3 class="jellee">12 octobre <font style="color: orange">2016</font></h3>
+					<h3 class="jellee">11 octobre <font style="color: orange">2016</font></h3>
 				</section>
 				<section style="text-align: right;">
 					<h1 class="jellee">en 10 minutes !</h1>
@@ -39,6 +39,10 @@
 					<h2 class="jellee">Développeur</h2>
 					<p class="jellee">Passionné de nouvelles technologies</p>
 					<p class="jellee">#jvm #docker #craftsmanship #rpi #diy</p>
+				</section>
+				<section>
+					<p>Qui a déjà tenté de changer de framework (DI, ORM, ...) ?</p>
+					<p class="fragment">C'est galère ?</p>
 				</section>
 				<section data-background="img/spaghetti.jpg">
 					<div style="background-color:rgba(0, 0, 0, 0.5);" class="fragment">
@@ -110,12 +114,15 @@
 						<li>Tests métier sans avoir à gérer l'infra</li>
 						<li>Validation rapide du métier</li>
 					</ul>
+					<p>
+						<img src="img/tests.gif" style="border:0; height: 350px;">
+					</p>
 				</section>
 				<section>
 					<h3>On commence quand ?</h3>
 					<ul>
-						<li>nouveaux : simple à mettre en place</li>
-						<li>existants : démêlage de spaghettis</li>
+						<li>nouveau projet : simple à mettre en place</li>
+						<li>projet existant : démêlage de spaghettis</li>
 					</ul>
 					<p>
 						<img src="img/cantWait.gif" style="border:0; height: 350px;">
@@ -126,7 +133,7 @@
 					<ul>
 						<li>Changer de framework</li>
 						<li>Changer de BDD</li>
-						<li>Migrer une partie des données (ie SQL vers NoSQL)</li>
+						<li>Migrer une partie des données (ie. SQL vers NoSQL)</li>
 						<li>Ajouter une interface (API, messaging, autre IHM)</li>
 					</ul>
 				</section>
@@ -140,8 +147,9 @@
 				<section>
 					<h3>Dans quels cas ne pas l'utiliser</h3>
 					<ul>
-						<li>Développement d'un framework ou une librairie</li>
-						<li>Développement d'un module technique</li>
+						<li>Framework</li>
+						<li>Librairie</li>
+						<li>Module technique</li>
 					</ul>
 				</section>
 				<section>
@@ -150,6 +158,9 @@
 						<li>Faire communiquer plusieurs héxagones, chacun représentant un métier séparé</li>
 						<li>Un amateur pour faire une présentation du DDD ?</li>
 					</ul>
+					<p>
+						<img src="img/ddd.jpg" style="border:0; height: 350px;">
+					</p>
 				</section>
 				<section>
 					<h3>Questions ?</h3>
