--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
 						<li>Impossible d'utiliser du code "infra" dans le module "métier"</li>
 						<li>Rien n'empêche d'avoir du code "métier" qui se retrouve dans les modules "infra"</li>
 					</ul>
+					<p>
+						<img src="img/permeabilite.png" style="border:0; height: 350px;">
+					</p>
 				</section>
 				<section>
 					<h3>Dans quels cas ne pas l'utiliser</h3>
