--- a/index.html
+++ b/index.html
@@ -148,6 +148,13 @@
 					</p>
 				</section>
 				<section>
+					<h3>Retour d'expérience</h3>
+					<ul>
+						<li>C'est le code "métier" qui va diriger le code "infra"</li>
+						<li>Penser à la performance (ie requête SQL dans une boucle)</li>
+					</ul>
+				</section>
+				<section>
 					<h3>Dans quels cas ne pas l'utiliser</h3>
 					<ul>
 						<li>Framework</li>
