ajout build npm pour export verss slideshare

--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
 						<li>Connaissance métier limitée en début de projet</li>
 					</ul>
 					<p>
-						<object data="img/connaissance.svg" type="image/svg+xml">
-						</object>
+						<img src="img/connaissance.svg" width="400px">
 					</p>
 				</section>
 				<section>
@@ -102,8 +101,7 @@
 						<li>Code technique dans des modules séparés</li>
 					</ul>
 					<p>
-						<object data="img/hexa.svg" type="image/svg+xml">
-						</object>
+						<img src="img/hexa.svg" width="400px">
 					</p>
 				</section>
 				<section>
